# psychic-umbrella

./: README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: desktop-build.yml
docs/: CODEBASE_AUDIT_AND_REFACTOR_PLAN.md  RELEASE_SECURITY.md  TAURI_COMMAND_INVENTORY.md
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs
src/components/: controls.tsx
src/lib/: api.ts  comparison.ts  document.ts  editorDom.ts  export.ts  settings.ts  types.ts
