[package]
name = "diff"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
git2 = "0.19"
roxmltree = "0.20"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
uuid = { version = "1", features = ["v4", "serde"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
